# rinha-de-backend-2025

./: .gitignore  .taplo.toml  Cargo.toml  Dockerfile  TODO.md  Taskfile.yml  docker-compose.yml  nginx.conf  rust-toolchain.toml
.github/workflows/: rust.yml
backend/: Cargo.toml  handlers.rs  main.rs  state.rs  util.rs  worker.rs
backend_core/: Cargo.toml
backend_core/models/: backend.rs  mod.rs  processor.rs
