[package]
name                 = "backend"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
path = "main.rs"
name = "backend"

[dependencies]
axum               = { workspace = true }
tower              = { workspace = true }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
futures-util       = { workspace = true }
tracing-subscriber = { workspace = true }
