[package]
name                 = "backend"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
path = "main.rs"
name = "backend"

[dependencies]
axum               = { workspace = true, features = ["query"] }
tower              = { workspace = true, features = ["retry"] }
tokio              = { workspace = true, features = ["full"] }
tracing            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
futures-util       = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow             = "1.0.98"
tracing-appender   = "0.2.3"
tower-http         = { workspace = true, features = ["trace"] }
backend_core       = { version = "0.0.1", path = "../backend_core" }
redis              = { version = "0.32.3", features = ["aio", "tokio-comp"] }
axum-test          = "17.3.0"
uuid               = { workspace = true, features = ["serde", "v4"] }
url                = "2.5.4"
reqwest            = { version = "0.12.22", features = ["json"] }
tokio-retry        = "0.3"
chrono.workspace   = true
async-stream = "0.3.6"
