[package]
name                 = "backend_core"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
tracing      = { workspace = true }
